//FINISHED CSS //UPDATE MESSAGES TO CURENT ROOM WHEN SWITCHING ROOMS //DONE FIXME: MESSAGES OVERFLOW to container //FIXME: CANTT, MESSAGES WONT FLEX WRAP IDK WHY TRIED EVERYTTHING I COULD THINK OF Everything is working, just now need to get users socketit on page load to associate it with their messsages and move their messages on the right and others on the left, and add room lgos when uesrs join and leave

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,9 +37,10 @@ body, html {
 .sideBar {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  width: 20%;
 }
 
 .msgs-container {
   width: 75%;
 }
+
